item adds/changes

--- a/world/map/langs/lang_es.txt
+++ b/world/map/langs/lang_es.txt
@@ -836,6 +836,9 @@ Besides, only a handful of mana beings know how to erase something of existence.
 Beware of what thou wishest for, mortal...
 
 
+BirdLeg
+
+
 Birrod
 
 
@@ -1139,7 +1142,7 @@ Brave adventurers from all around the world,
 Brawling
 
 
-Bring me ten bug legs, and I will reveal its invocation to you.
+Bring me ten insect legs, and I will reveal its invocation to you.
 
 
 Brodomir
@@ -1179,9 +1182,6 @@ Bryant
 
 
 BucketHat
-
-
-BugLeg
 
 
 BullHelmet
@@ -1458,9 +1458,6 @@ Chest#sword
 
 
 ChicSantaHat
-
-
-ChickenLeg
 
 
 Chief Warrick
@@ -3512,6 +3509,12 @@ Initialize the fight
 Inn
 Mesón
 
+InsectLeg
+
+
+InsectSlime
+
+
 Inspector#Hurnscald
 
 
@@ -4148,9 +4151,6 @@ MagentaOrnament
 Maggot
 Gusano
 
-MaggotSlime
-
-
 Magic Sword
 
 
@@ -4667,7 +4667,7 @@ Ah, ¡y hasta puedes recibir una fruta si tiene suerte! Pero tienes que estar al
 Oh, and by the way my name is Sorfina."
 
 
-Oh, but of course! You are powerful enough to make your own lifestones, using the enchantment '%s'. This will consume a bug leg, a maggot slime and one of each of the four healing herbs, though.
+Oh, but of course! You are powerful enough to make your own lifestones, using the enchantment '%s'. This will consume a insect leg, a insect slime and one of each of the four healing herbs, though.
 
 
 Oh, sorry – I don't really know him very well.
