--- a/world/map/langs/lang_fr.txt
+++ b/world/map/langs/lang_fr.txt
@@ -835,6 +835,8 @@ Besides, only a handful of mana beings know how to erase something of existence.
 
 Beware of what thou wishest for, mortal...
 
+BirdLeg
+
 
 Birrod
 
@@ -1139,7 +1141,7 @@ Brave adventurers from all around the world,
 Brawling
 
 
-Bring me ten bug legs, and I will reveal its invocation to you.
+Bring me ten insect legs, and I will reveal its invocation to you.
 
 
 Brodomir
@@ -1179,9 +1181,6 @@ Bryant
 
 
 BucketHat
-
-
-BugLeg
 
 
 BullHelmet
@@ -1458,9 +1457,6 @@ Chest#sword
 
 
 ChicSantaHat
-
-
-ChickenLeg
 
 
 Chief Warrick
@@ -3512,6 +3508,12 @@ Initialize the fight
 Inn
 Auberge
 
+InsectLeg
+
+
+InsectSlime
+
+
 Inspector#Hurnscald
 
 
@@ -4148,9 +4150,6 @@ MagentaOrnament
 Maggot
 Ver
 
-MaggotSlime
-
-
 Magic Sword
 
 
@@ -4667,7 +4666,7 @@ Oh, et un fruit peut même tomber si tu as de la chance ! Mais fais attention à
 Oh, and by the way my name is Sorfina."
 
 
-Oh, but of course! You are powerful enough to make your own lifestones, using the enchantment '%s'. This will consume a bug leg, a maggot slime and one of each of the four healing herbs, though.
+Oh, but of course! You are powerful enough to make your own lifestones, using the enchantment '%s'. This will consume a insect leg, a insect slime and one of each of the four healing herbs, though.
 
 
 Oh, sorry – I don't really know him very well.
