--- a/world/map/langs/lang_en.txt
+++ b/world/map/langs/lang_en.txt
@@ -836,6 +836,9 @@ Besides, only a handful of mana beings know how to erase something of existence.
 Beware of what thou wishest for, mortal...
 Beware of what thou wishest for, mortal...
 
+BirdLeg
+BirdLeg
+
 Birrod
 Birrod
 
@@ -1139,8 +1142,8 @@ Brave adventurers from all around the world,
 Brawling
 Brawling
 
-Bring me ten bug legs, and I will reveal its invocation to you.
-Bring me ten bug legs, and I will reveal its invocation to you.
+Bring me ten insect legs, and I will reveal its invocation to you.
+Bring me ten insect legs, and I will reveal its invocation to you.
 
 Brodomir
 Brodomir
@@ -1180,9 +1183,6 @@ Bryant
 
 BucketHat
 BucketHat
-
-BugLeg
-BugLeg
 
 BullHelmet
 BullHelmet
@@ -1459,9 +1459,6 @@ Chest#sword
 
 ChicSantaHat
 ChicSantaHat
-
-ChickenLeg
-ChickenLeg
 
 Chief Warrick
 Chief Warrick
@@ -3512,6 +3509,12 @@ Initialize the fight
 Inn
 Inn
 
+InsectLeg
+InsectLeg
+
+InsectSlime
+InsectSlime
+
 Inspector#Hurnscald
 Inspector#Hurnscald
 
@@ -4148,9 +4151,6 @@ MagentaOrnament
 Maggot
 Maggot
 
-MaggotSlime
-MaggotSlime
-
 Magic Sword
 Magic Sword
 
@@ -4667,8 +4667,8 @@ Oh, and a fruit may even fall for you if you are lucky! But stay alert to pick u
 Oh, and by the way my name is Sorfina."
 Oh, and by the way my name is Sorfina."
 
-Oh, but of course! You are powerful enough to make your own lifestones, using the enchantment '%s'. This will consume a bug leg, a maggot slime and one of each of the four healing herbs, though.
-Oh, but of course! You are powerful enough to make your own lifestones, using the enchantment '%s'. This will consume a bug leg, a maggot slime and one of each of the four healing herbs, though.
+Oh, but of course! You are powerful enough to make your own lifestones, using the enchantment '%s'. This will consume a insect leg, a insect slime and one of each of the four healing herbs, though.
+Oh, but of course! You are powerful enough to make your own lifestones, using the enchantment '%s'. This will consume a insect leg, a insect slime and one of each of the four healing herbs, though.
 
 Oh, sorry – I don't really know him very well.
 Oh, sorry – I don't really know him very well.
