Removed all #_M refs, removed Golbenez magic flag, added more magical NPCs, text corrections

--- a/world/map/langs/lang_en.txt
+++ b/world/map/langs/lang_en.txt
@@ -647,8 +647,8 @@ Auldsbel places the logs next to his hut.
 Auldsbel the Wizard
 Auldsbel the Wizard
 
-Auldsbel#_M
-Auldsbel#_M
+Auldsbel
+Auldsbel
 
 Aureole
 Aureole
@@ -2198,8 +2198,8 @@ Elanore smiles.
 Elanore the Healer
 Elanore the Healer
 
-Elanore#_M
-Elanore#_M
+Elanore
+Elanore
 
 ElfNightcap
 ElfNightcap
@@ -2453,8 +2453,8 @@ For unfocusing you need to bring a potion; a special potion. That potion is not 
 For your deeds, I shall bestow upon you %d %s. Use them wisely, they are the results of your hard effort.
 For your deeds, I shall bestow upon you %d %s. Use them wisely, they are the results of your hard effort.
 
-Forest Mana Seed#_M
-Forest Mana Seed#_M
+Forest Mana Seed
+Forest Mana Seed
 
 ForestArmor
 ForestArmor
@@ -4379,8 +4379,8 @@ Moooooooooooo!
 MopoxCurePotion
 MopoxCurePotion
 
-Morgan#_M
-Morgan#_M
+Morgan
+Morgan
 
 MorganDebug
 MorganDebug
@@ -4706,8 +4706,8 @@ Old Chest#crastur
 Old Man
 Old Man
 
-Old Wizard#_M
-Old Wizard#_M
+Old Wizard
+Old Wizard
 
 Old Woman
 Old Woman
@@ -5240,8 +5240,8 @@ Poppet
 Pot
 Pot
 
-Potions#_M
-Potions#_M
+Potions
+Potions
 
 Practice! There are no secrets to becoming a warrior.
 Practice! There are no secrets to becoming a warrior.
@@ -5816,8 +5816,8 @@ Sabine
 Sabre
 Sabre
 
-Sagatha#_M
-Sagatha#_M
+Sagatha
+Sagatha
 
 Said to have the key to stop Zax De'Kagen's ambitions.
 Said to have the key to stop Zax De'Kagen's ambitions.
@@ -7613,8 +7613,8 @@ Wyara is the Hurnscald town witch. She was also the town healer before the Docto
 Wyara the Witch
 Wyara the Witch
 
-Wyara#_M
-Wyara#_M
+Wyara
+Wyara
 
 Xakelbael
 Xakelbael
