--- a/world/map/langs/lang_fr.txt
+++ b/world/map/langs/lang_fr.txt
@@ -647,7 +647,7 @@ Auldsbel places the logs next to his hut.
 Auldsbel the Wizard
 
 
-Auldsbel#_M
+Auldsbel
 
 
 Aureole
@@ -2197,7 +2197,7 @@ Elanore smiles.
 Elanore the Healer
 
 
-Elanore#_M
+Elanore
 
 
 ElfNightcap
@@ -2452,7 +2452,7 @@ For unfocusing you need to bring a potion; a special potion. That potion is not 
 For your deeds, I shall bestow upon you %d %s. Use them wisely, they are the results of your hard effort.
 
 
-Forest Mana Seed#_M
+Forest Mana Seed
 
 
 ForestArmor
@@ -4378,7 +4378,7 @@ Moooooooooooo!
 MopoxCurePotion
 
 
-Morgan#_M
+Morgan
 
 
 MorganDebug
@@ -4705,7 +4705,7 @@ Old Chest#crastur
 Old Man
 
 
-Old Wizard#_M
+Old Wizard
 
 
 Old Woman
@@ -5239,7 +5239,7 @@ Poppet
 Pot
 
 
-Potions#_M
+Potions
 
 
 Practice! There are no secrets to becoming a warrior.
@@ -5815,7 +5815,7 @@ Sabine
 Sabre
 
 
-Sagatha#_M
+Sagatha
 
 
 Said to have the key to stop Zax De'Kagen's ambitions.
@@ -7612,7 +7612,7 @@ Wyara is the Hurnscald town witch. She was also the town healer before the Docto
 Wyara the Witch
 
 
-Wyara#_M
+Wyara
 
 
 Xakelbael
