Added a bunch of NPCs that miteyo should detect
I probably missed some. I may have a few errors, but I sure found a lot of npcs that are magical and ready for detection with #miteyo. TY Hello=) for the IS_MAGIC code.

Reviewed-by: Hello TMW <hello@themanaworld.org>

--- a/world/map/langs/lang_pt_BR.txt
+++ b/world/map/langs/lang_pt_BR.txt
@@ -647,7 +647,7 @@ Auldsbel places the logs next to his hut.
 Auldsbel the Wizard
 
 
-Auldsbel#_M
+Auldsbel
 
 
 Aureole
@@ -2198,7 +2198,7 @@ Elanore smiles.
 Elanore the Healer
 
 
-Elanore#_M
+Elanore
 
 
 ElfNightcap
@@ -2453,7 +2453,7 @@ For unfocusing you need to bring a potion; a special potion. That potion is not 
 For your deeds, I shall bestow upon you %d %s. Use them wisely, they are the results of your hard effort.
 
 
-Forest Mana Seed#_M
+Forest Mana Seed
 
 
 ForestArmor
@@ -4379,7 +4379,7 @@ Moooooooooooo!
 MopoxCurePotion
 
 
-Morgan#_M
+Morgan
 
 
 MorganDebug
@@ -4706,7 +4706,7 @@ Old Chest#crastur
 Old Man
 
 
-Old Wizard#_W
+Old Wizard
 
 
 Old Woman
@@ -5240,7 +5240,7 @@ Poppet
 Pot
 
 
-Potions#_M
+Potions
 
 
 Practice! There are no secrets to becoming a warrior.
@@ -5816,7 +5816,7 @@ Sabine
 Sabre
 
 
-Sagatha#_M
+Sagatha
 
 
 Said to have the key to stop Zax De'Kagen's ambitions.
@@ -7613,7 +7613,7 @@ Wyara is the Hurnscald town witch. She was also the town healer before the Docto
 Wyara the Witch
 
 
-Wyara#_M
+Wyara
 
 
 Xakelbael
