--- a/world/map/langs/lang_de.txt
+++ b/world/map/langs/lang_de.txt
@@ -5450,6 +5450,9 @@ RIP#9
 RabbitEars
 
 
+RaggedShirt
+
+
 RaggedShorts
 
 
@@ -8114,7 +8117,7 @@ Du hast die exp Rate erfolgreich auf @@% eingestellt. Sie wird in @@ auf @@% zur
 You suddenly feel naked; you ARE naked!
 
 
-You take a simple Cotton Shirt and some very worn-out Ragged Shorts out of the dresser.
+You take a very worn-out Ragged Shirt and some very worn-out Ragged Shorts out of the dresser.
 
 
 You were blessed by Kirin De'Kagen. The effects will vanish when you die or once thirty minutes have passed.
