--- a/world/map/langs/lang_en.txt
+++ b/world/map/langs/lang_en.txt
@@ -5450,6 +5450,9 @@ RIP#9
 RabbitEars
 RabbitEars
 
+RaggedShirt
+RaggedShirt
+
 RaggedShorts
 RaggedShorts
 
@@ -8114,8 +8117,8 @@ You successfully set the exp rate to @@%. It will reset to @@% (default value) i
 You suddenly feel naked; you ARE naked!
 You suddenly feel naked; you ARE naked!
 
-You take a simple Cotton Shirt and some very worn-out Ragged Shorts out of the dresser.
-You take a simple Cotton Shirt and some very worn-out Ragged Shorts out of the dresser.
+You take a very worn-out Ragged Shirt and some very worn-out Ragged Shorts out of the dresser.
+You take a very worn-out Ragged Shirt and some very worn-out Ragged Shorts out of the dresser.
 
 You were blessed by Kirin De'Kagen. The effects will vanish when you die or once thirty minutes have passed.
 You were blessed by Kirin De'Kagen. The effects will vanish when you die or once thirty minutes have passed.
