--- a/world/map/langs/lang_fr.txt
+++ b/world/map/langs/lang_fr.txt
@@ -5449,6 +5449,9 @@ RIP#9
 RabbitEars
 
 
+RaggedShirt
+
+
 RaggedShorts
 
 
@@ -8113,7 +8116,7 @@ Tu as établi le taux d'exp à @@% avec succès. Il se réinitialisera à @@% (v
 You suddenly feel naked; you ARE naked!
 
 
-You take a simple Cotton Shirt and some very worn-out Ragged Shorts out of the dresser.
+You take a very worn-out Ragged Shirt and some very worn-out Ragged Shorts out of the dresser.
 
 
 You were blessed by Kirin De'Kagen. The effects will vanish when you die or once thirty minutes have passed.
